[gd_scene load_steps=6 format=2]

[ext_resource path="res://Theme/default/theme.tres" type="Theme" id=1]
[ext_resource path="res://mocraClassic/client_infos/add_texture.png" type="Texture2D" id=2]
[ext_resource path="res://mocraClassic/client_infos/credit_edit.gd" type="Script" id=3]

[sub_resource type="Animation" id=2]
resource_name = "end"
length = 5.0
step = 1.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PackedFloat32Array( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 3, 4, 5 )
}

[sub_resource type="Animation" id=1]
resource_name = "show"
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PackedFloat32Array(  ),
"times": PackedFloat32Array(  )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PackedFloat32Array(  ),
"times": PackedFloat32Array(  )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PackedFloat32Array(  ),
"times": PackedFloat32Array(  )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PackedFloat32Array( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 1 )
}

[node name="Control" type="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1420.0
offset_bottom = -830.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="backgroundTexture" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -125.0
offset_right = 250.0
offset_bottom = 125.0
scale = Vector2( 1, 0.7 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -74.0
offset_right = 22.0
offset_bottom = 11.0
grow_horizontal = 2
text = "0"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/end = SubResource( 2 )
anims/show = SubResource( 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
